# mdnssdpd

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  module.nix  package.nix  test-module.nix  test.nix
.github/workflows/: ci.yml
examples/: sniff-only.toml  tidal-reflect.toml
src/: config.rs  dns_util.rs  main.rs  receiver.rs  route.rs  sender.rs
src/filter/: mod.rs  ops.rs  path.rs
src/output/: log.rs  mod.rs  reflect.rs
src/transform/: mod.rs  remove_records.rs  set_ttl.rs
