[package]
name = "mdnssdpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
hickory-proto = "0.25.2"
ipnet = "2.12.0"
jaq-core = "3.0.0"
jaq-interpret = "1.5.0"
jaq-json = { version = "2.0.0", features = ["serde"] }
jaq-std = "3.0.0"
network-interface = "2.0.5"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = { version = "0.6.3", features = ["all"] }
toml = "1.1.2"
